--- a/CSS-Styles/image.css
+++ b/CSS-Styles/image.css
@@ -23,10 +23,21 @@
     /* width: 100%; */
     height: 500px;
     padding: 50px;
+    border: 3px solid #4d4d4d;
     color: white;
     background-image: url('../Images/white\ snow\ wolf.jpg');
     /* background-size: contain; */
-    /* background-size: cover; */
+    background-size: cover;
     background-repeat: no-repeat;
-    background-size: 100%;
+    /* background-size: 100%; */
+}
+.box-2{
+    height: 230px;
+    padding: 20px;
+    color: white;
+    box-shadow: 2px 3px 9px 2px #3f3f3f;
+    margin: 50px 10px;
+    background-image: url('../Images/white\ snow\ wolf.jpg');
+    background-size: contain;
+    background-repeat: repeat-x;
 }
