--- a/CSS-Styles/table.css
+++ b/CSS-Styles/table.css
@@ -1,15 +1,31 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
 }
+h1{
+    text-align: center;
+}
 table{
     width: 80%;
     margin: 0 auto;
+    border: 1px solid lightgray;
+}
+caption{
+    margin-bottom: 10px;
 }
 td, th{
-    border: 1px solid black;
+    border: 1px solid lightgray;
     font-size: 18px;
     padding: 10px 10px;
 }
-tbody > tr:nth-child(odd){
+tbody > tr:nth-child(even){
     background-color: rgb(228, 242, 255);
+}
+thead > tr:nth-child(1), thead > tr:nth-child(3){
+    background-color: bisque;
+}
+tfoot > tr:first-child{
+    text-align: center;
+}
+tfoot > tr{
+    font-weight: bold;
 }
