--- a/CSS-Styles/navbar.css
+++ b/CSS-Styles/navbar.css
@@ -1,8 +1,5 @@
-header{
-    /* background-color: aliceblue; */
-    /* height: 80px; */
-}
 nav > ul{
+    font-family: Arial, Helvetica, sans-serif;
     background-color: aliceblue;
     height: 60px;
     display: flex;
