--- a/CSS-Styles/navbar.css
+++ b/CSS-Styles/navbar.css
@@ -9,40 +9,32 @@ nav > ul{
 nav > ul li{
     list-style-type: none;
     /* margin-right: 20px; */
+    padding: 10px 15px;
+    background-color: #edcdfd;
 }
 nav > ul li a{
     text-decoration: none;
     color: black;
     font-weight: bold;
 }
-nav > ul > li > a{
-    padding: 15px 20px;
-    background-color: #edcdfd;
-}
-nav > ul > li > a:hover{
-    color: #fffef6;
-    background-color: #242424;
-}
-/* sub-menu */
-.sub-nav{
-    /* display: none; */
-    position: absolute;
-    background-color: #fbbc85;
-    margin-top: 15px;
-    padding: 0px;
-}
-nav > ul > li:hover > ul{
-    display: block;
-}
-.sub-nav > li{
-    /* list-style-type: none; */
-    /* margin-top: 20px; */
-    padding: 10px 15px;
-}
-.sub-nav li:hover{
+nav > ul li:hover{
     background-color: #242424;
     cursor: pointer;
 }
-.sub-nav > li:hover > a{
-    color: #fffef6;
+nav > ul li:hover > a{
+    color: #f9f9f9;
+}
+/* sub-menu */
+.sub-nav{
+    display: none;
+    position: absolute;
+    margin-left: -15px;
+    margin-top: 10px;
+    padding: 0px;
+}
+.sub-nav > li{
+    background-color: #fcebd6;
+}
+nav > ul > li:hover > ul{
+    display: block;
 }
