--- a/CSS-Styles/position.css
+++ b/CSS-Styles/position.css
@@ -27,3 +27,11 @@
     top: 0px;
     right: 0px;
 }
+.extra{
+    width: 90%;
+    padding: 20px;
+    background-color: beige;
+    margin: 0 auto;
+    margin-top: 20px;
+    border-left: 5px solid rgb(225, 186, 134);
+}
