--- a/CSS-Styles/position.css
+++ b/CSS-Styles/position.css
@@ -35,3 +35,9 @@
     margin-top: 20px;
     border-left: 5px solid rgb(225, 186, 134);
 }
+.sticky{
+    background-color: #fcb3b38e;
+    border: none;
+    position: sticky;
+    top: 10px;
+}
