--- a/CSS-Styles/psuedo.css
+++ b/CSS-Styles/psuedo.css
@@ -69,3 +69,28 @@
 .water > img{
     width: 100px;
 }
+/* before after */
+.before-after{
+    background-color: cornflowerblue;
+    width: 350px;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+    font-weight: bold;
+    color: #fafafa;
+    margin: 0 auto;
+}
+.before-after::before{
+    content: 'Start';
+    background-color: bisque;
+    color: #2a2a2a;
+    padding: 20px 0px 20px 20px;
+    margin-right: 10px;
+}
+.before-after::after{
+    content: 'End';
+    background-color: bisque;
+    color: #2a2a2a;
+    padding: 20px 20px 20px 0px;
+    margin-left: 10px;
+}
