--- a/CSS-Styles/align.css
+++ b/CSS-Styles/align.css
@@ -6,3 +6,10 @@
     width: 240px;
     margin: 0 auto;
 }
+/* align image center */
+.image{
+    width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
