--- a/CSS-Styles/align.css
+++ b/CSS-Styles/align.css
@@ -34,7 +34,7 @@
     transform: translate(-50%, -50%);
 }
 /* center align image using position */
-.img-center > img{
+img{
     width: 150px;
 }
 .img-center{
@@ -42,4 +42,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+/* align text and image verticaly with flexbox */
+.container{
+    display: flex;
+    align-items: center;
 }
