--- a/CSS-Styles/align.css
+++ b/CSS-Styles/align.css
@@ -48,3 +48,11 @@ img{
     display: flex;
     align-items: center;
 }
+/* align text and image horizontaly with flexbox */
+.container-2{
+    height: 300px;
+    border: 2px solid;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
