--- a/CSS-Styles/grid.css
+++ b/CSS-Styles/grid.css
@@ -12,4 +12,10 @@
     grid-template-columns: repeat(5, 100px);
     gap: 10px;
     /* grid-gap: 10px; */
+    /* justify-content: center; */
+    /* justify-content: end; */
+    /* justify-content: start; */
+    /* justify-content: space-around; */
+    /* justify-content: space-between; */
+    justify-content: space-evenly;
 }
