--- a/CSS-Styles/grid.css
+++ b/CSS-Styles/grid.css
@@ -4,13 +4,17 @@
     padding: 20px;
 }
 .container{
+    border: 1px solid gray;
+    padding: 20px 0px;
+    /* min-height: 85vh; */
+    background-color: rgb(255, 251, 240);
     display: grid;
     /* grid-template-columns: 200px 200px 200px 200px; */
     /* grid-template-columns: 100px 200px 300px 500px; */
     /* grid-template-columns: repeat(5, 100px); */
     /* grid-template-columns: repeat(2, 1fr) 150px 100px; */
     grid-template-columns: repeat(5, 100px);
-    gap: 10px;
+    gap: 20px;
     /* grid-gap: 10px; */
     /* justify-content: center; */
     /* justify-content: end; */
@@ -18,4 +22,8 @@
     /* justify-content: space-around; */
     /* justify-content: space-between; */
     justify-content: space-evenly;
+    /* align-items: center; */
+    /* align-items: start; */
+    /* align-items: end; */
+    align-items: self-start;
 }
