--- a/CSS-Styles/grid.css
+++ b/CSS-Styles/grid.css
@@ -14,7 +14,8 @@
     /* grid-template-columns: repeat(5, 100px); */
     /* grid-template-columns: repeat(2, 1fr) 150px 100px; */
     grid-template-columns: repeat(5, 100px);
-    gap: 20px;
+    /* gap: 20px; */
+    row-gap: 30px;
     /* grid-gap: 10px; */
     /* justify-content: center; */
     /* justify-content: end; */
@@ -26,4 +27,5 @@
     /* align-items: start; */
     /* align-items: end; */
     align-items: self-start;
+    column-gap: 50px;
 }
