--- a/CSS-Styles/media.css
+++ b/CSS-Styles/media.css
@@ -1,3 +1,24 @@
+*{
+    /* margin: 0;
+    padding: 0; */
+    font-family: sans-serif;
+    box-sizing: border-box;
+}
+.container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 15px;
+}
+.food{
+    border: 1px solid lightgray;
+}
 .container > .food > img{
-    width: 200px;
+    /* width: 100px; */
+    width: 100%;
+    position:relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.container h3, p{
+    padding: 0px 15px;
 }
