--- a/CSS-Styles/media.css
+++ b/CSS-Styles/media.css
@@ -22,3 +22,9 @@
 .container h3, p{
     padding: 0px 15px;
 }
+/* css media query */
+@media screen and (max-width: 576px) {
+    .container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
