--- a/CSS-Styles/media.css
+++ b/CSS-Styles/media.css
@@ -23,6 +23,11 @@
     padding: 0px 15px;
 }
 /* css media query */
+@media screen and (max-width: 768px) {
+    .container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
 @media screen and (max-width: 576px) {
     .container{
         grid-template-columns: repeat(1, 1fr);
