--- a/CSS-Styles/collage.css
+++ b/CSS-Styles/collage.css
@@ -12,5 +12,15 @@ img{
     flex: 1;
 }
 .vertical-image > img{
-    height: 50%;
+    /* height: 50%; */
+    height: calc((100% - 5px)/2);
+}
+.grid-image{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+}
+.grid-image > img{
+    height: 100%;
+    height: calc(150px - 2.5px);
 }
