--- a/CSS-Styles/collage.css
+++ b/CSS-Styles/collage.css
@@ -3,7 +3,7 @@ img{
     height: 100%;
 }
 .row{
-    height: 300px;
+    height: 400px;
     display: flex;
     gap: 5px;
     margin-bottom: 5px;
@@ -21,6 +21,20 @@ img{
     gap: 5px;
 }
 .grid-image > img{
-    height: 100%;
-    height: calc(150px - 2.5px);
+    /* height: 100%; */
+    height: calc(200px - 2.5px);
+}
+
+/* responsive media query */
+@media screen and (max-width: 576px) {
+    .row{
+        flex-direction: column;
+        height: auto;
+    }
+    .grid-image{
+        grid-template-columns: 1fr;
+    }
+    .grid-image > img{
+        height: auto;
+    }
 }
