--- a/CSS-Styles/collage.css
+++ b/CSS-Styles/collage.css
@@ -27,7 +27,7 @@ img{
 
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .row{
+    /* .row{
         flex-direction: column;
         height: auto;
     }
@@ -36,5 +36,30 @@ img{
     }
     .grid-image > img{
         height: auto;
+    } */
+    .row{
+        height: auto;
+        display: inline;
+        gap: 5px;
+        margin-bottom: 5px;
+    }
+    .row > div{
+        flex: 1;
+    }
+    .vertical-image > img{
+        height: auto;
+        /* height: calc((100% - 5px)/2); */
+    }
+    .grid-image{
+        display: inline;
+        /* grid-template-columns: repeat(2, 1fr); */
+        /* gap: 5px; */
+    }
+    .grid-image > img{
+        height: auto;
+        /* height: calc(200px - 2.5px); */
+    }
+    img{
+        margin-bottom: 5px;
     }
 }
