--- a/CSS-Styles/collage.css
+++ b/CSS-Styles/collage.css
@@ -26,6 +26,12 @@ img{
 }
 
 /* responsive media query */
+@media screen and (max-width: 992px){
+    .row{
+        flex-direction: column;
+        height: auto;
+    }
+}
 @media screen and (max-width: 576px) {
     /* .row{
         flex-direction: column;
