--- a/CSS-Styles/area-layout.css
+++ b/CSS-Styles/area-layout.css
@@ -37,3 +37,14 @@
         grid-template-areas: "header" "nav" "advertise" "main" "sidebar" "footer";
     }
 }
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .container{
+        grid-template-areas: 
+        "header header  header"
+        "nav    nav     nav"
+        "main    main   sidebar"
+        "main    main   advertise"
+        "footer footer footer"
+        ;
+    }
+}
